fix(model): improve card collection serialization and state management
- Fix CardCollection serialization/deserialization
- Better handling of transient fields
- Improved player state lifecycle management